# serializer version: 1
# name: test_entry_diagnostics[view_plus]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': '**REDACTED**',
        'secret': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'client_id',
      'version': 1,
    }),
    'coordinator_data': dict({
      '2960000001': dict({
        'device_id': '2960000001',
        'device_type': 'VIEW_PLUS',
        'is_active': True,
        'location_name': 'Home',
        'name': 'Living Room',
        'product_name': 'View Plus',
        'sensors': dict({
          'battery': 1.1,
          'co2': 2.2,
          'humidity': 3.3,
          'pm1': 4.4,
          'pm25': 5.5,
          'pressure': 6.6,
          'radonShortTermAvg': 7.7,
          'temp': 8.8,
          'voc': 9.9,
        }),
      }),
    }),
  })
# ---
# name: test_entry_diagnostics[wave_enhance]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': '**REDACTED**',
        'secret': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'client_id',
      'version': 1,
    }),
    'coordinator_data': dict({
      '3210000003': dict({
        'device_id': '3210000003',
        'device_type': 'WAVE_ENHANCE',
        'is_active': True,
        'location_name': 'Home',
        'name': 'Bedroom',
        'product_name': 'Wave Enhance',
        'sensors': dict({
          'battery': 1.1,
          'co2': 2.2,
          'humidity': 3.3,
          'lux': 4.4,
          'pressure': 5.5,
          'sla': 6.6,
          'temp': 7.7,
          'voc': 8.8,
        }),
      }),
    }),
  })
# ---
# name: test_entry_diagnostics[wave_plus]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': '**REDACTED**',
        'secret': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'client_id',
      'version': 1,
    }),
    'coordinator_data': dict({
      '2930000002': dict({
        'device_id': '2930000002',
        'device_type': 'WAVE_PLUS',
        'is_active': True,
        'location_name': 'Home',
        'name': 'Office',
        'product_name': 'Wave Plus',
        'sensors': dict({
          'battery': 1.1,
          'co2': 2.2,
          'humidity': 3.3,
          'pressure': 4.4,
          'radonShortTermAvg': 5.5,
          'temp': 6.6,
          'voc': 7.7,
        }),
      }),
    }),
  })
# ---
